5 create backend routes (#6)
* update schema and sqlalchemy models.

* add routes.

* add blueprint routes to app.

* add sql script for initializing db data.
